Save changes to .env

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=mysql+pymysql://root:Ilovetocode1@localhost:3307/digital_fridge
+DATABASE_URL=mysql+pymysql://root:code@localhost/digital_fridge
 SPOONACULAR_API_KEY=e36c2787b8bd417c91b7c5dbe0315b4b
